Documentation edits made through Mintlify web editor

--- a/style.css
+++ b/style.css
@@ -14,11 +14,11 @@
 }
 
 #table-of-contents {
-  max-width: 150px;}
+  max-width: 150px;
 }
 
 #content-area {
-  max-width: 500px;}
+  max-width: 43rem;
 }
 
 /* Typography/layout */
