--- a/style.css
+++ b/style.css
@@ -21,11 +21,11 @@
   max-width: 45rem;
 }
 
-#h1 { font-size: 2.25rem; }
-#h2 { font-size: 1.9rem; }
-#h3 { font-size: 1.375rem; }
-#h4 { font-size: 1.125rem; }
-#body {font-size: 1rem;}
+h1 { font-size: 2.25rem; }
+h2 { font-size: 1.9rem; }
+h3 { font-size: 1.375rem; }
+h4 { font-size: 1.125rem; }
+body {font-size: 1rem;}
 
 
 /* Fallback + progressive enhancement cho color-mix */
