--- a/style.css
+++ b/style.css
@@ -22,10 +22,10 @@
 }
 
 h1 { font-size: 2.25rem; }
-h2 { font-size: 1.9rem; }
-h3 { font-size: 1.375rem; }
-h4 { font-size: 1.125rem; }
-body {font-size: 1rem;}
+h2 { font-size: 1.75rem; }
+h3 { font-size: 1.25rem; }
+h4 { font-size: 1rem; }
+p {font-size: 1rem;}
 
 
 /* Fallback + progressive enhancement cho color-mix */
