--- a/style.css
+++ b/style.css
@@ -24,8 +24,7 @@
 h1 { font-size: 2.5rem; }
 h2 { font-size: 1.5rem; }
 h3 { font-size: 1.25rem; }
-h4 { font-size: 1rem; }
-p {font-size: 0.9375rem;}
+text {font-size: 0.9375rem;}
 
 
 /* Fallback + progressive enhancement cho color-mix */
