--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@
 #content-area h1 { font-size: 2.5rem; }
 #content-area h2 { font-size: 1.5rem; }
 #content-area h3 { font-size: 1.25rem; }
-#content-area p {font-size: 0.9375rem;}
+#content-area text {font-size: 0.9375rem;}
 
 
 /* Fallback + progressive enhancement cho color-mix */
