--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@
 }
 
 #table-of-contents {max-width: 268px;}
+#table-of-contents button {display:none;}
 
 #content-area {max-width: 100rem;}
 #content-area h1 { font-size: 2.5rem; }
