Documentation edits made through Mintlify web editor

--- a/style.css
+++ b/style.css
@@ -251,7 +251,7 @@ footer .navigation a {
     font-size: 13px;
   }
   
-  #page-context-menu-button {
+  #page-context-menu {
     display: none !important;
   }
 }
