--- a/style.css
+++ b/style.css
@@ -203,17 +203,16 @@ footer .navigation a {
   }
   
   aside[role="navigation"] > div:last-child {
-    position: fixed; /* Pull it out of the sidebar's flow */
+    position: fixed !important; 
     
-    top: 16px;   /* Vertically centers in a 64px header */
-    right: 60px; /* Places it left of the search bar. Adjust this value as needed! */
+    top: 16px; !important  
+    right: 60px; !important
     
-    bottom: auto;
-    width: auto;
-    border-top: none;
-    padding: 0;
-    
-    z-index: 50; 
+    bottom: auto; !important
+    width: auto; !important
+    border-top: none; !important
+    padding: 0; !important
+    z-index: 50; !important
   }
 }
 }
