Documentation edits made through Mintlify web editor

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
 #table-of-contents {max-width: 268px;}
 #table-of-contents button {display:none;}
 
-#content-area {max-width: 100rem;}
+#content-area {max-width: 720px;}
 #content-area h1 { font-size: 2.5rem; }
 #content-area h2 { font-size: 1.5rem; }
 #content-area h3 { font-size: 1.25rem; }
